src/test/resources/private/typechecking/fail/main_structure/fail04_withCtor.jova
class Main
{
    Main()
    {
    }

    Main(int a)
    {

    }

    Main(int a, string b)
    {

    }


    Main(int a, string b, bool c)
    {

    }
}